--- a/roles/router/tasks/main.yaml
+++ b/roles/router/tasks/main.yaml
@@ -9,3 +9,10 @@
         - isc-dhcp-server
         - iptables
 
+
+- name: "Activar el bit de forwarding"
+  sysctl:
+    name: net.ipv4.ip_forward
+    value: "1"
+    state: present
+    reload: yes
