--- a/roles/router/tasks/main.yaml
+++ b/roles/router/tasks/main.yaml
@@ -29,3 +29,10 @@
       dest: /etc/default/isc-dhcp-server
       mode: 0644
     notify: reinicio_dhcp
+
+  - name: "Modificar archivo dhcpd.conf"
+    template:
+      src: dhcpd.conf
+      dest: /etc/dhcp/dhcpd.conf
+      mode: 0644
+    notify: reinicio_dhcp
