--- a/roles/router/tasks/main.yaml
+++ b/roles/router/tasks/main.yaml
@@ -23,16 +23,26 @@
       mode: 0644
     notify: reiniciar
 
-  - name: "Modificar archivo isc-dhcp-server"
+  - name: "Modificar archivos de configuración servidor"
     template:
-      src: isc-dhcp
-      dest: /etc/default/isc-dhcp-server
+      src: "{{ item.src }}"
+      dest: "{{ item.dest }}"
       mode: 0644
+    with items:
+      - { src: isc-dhcp, dest: /etc/default/isc-dhcp-server }
+      - { src; dhcpd.conf, dest: /etc/dhcp/dhcpd.conf }
     notify: reinicio_dhcp
 
-  - name: "Modificar archivo dhcpd.conf"
-    template:
-      src: dhcpd.conf
-      dest: /etc/dhcp/dhcpd.conf
-      mode: 0644
-    notify: reinicio_dhcp
+  # - name: "Modificar archivo isc-dhcp-server"
+  #   template:
+  #     src: isc-dhcp
+  #     dest: /etc/default/isc-dhcp-server
+  #     mode: 0644
+  #   notify: reinicio_dhcp
+
+  # - name: "Modificar archivo dhcpd.conf"
+  #   template:
+  #     src: dhcpd.conf
+  #     dest: /etc/dhcp/dhcpd.conf
+  #     mode: 0644
+  #   notify: reinicio_dhcp
