Parecía que tenia un fallo de sintaxis que no veia

--- a/roles/router/tasks/main.yaml
+++ b/roles/router/tasks/main.yaml
@@ -23,16 +23,6 @@
       mode: 0644
     notify: reiniciar
 
-  - name: "Modificar archivos de configuración servidor"
-    template:
-      src: "{{ item.src }}"
-      dest: "{{ item.dest }}"
-      mode: 0644
-    with items:
-      - { src: isc-dhcp, dest: /etc/default/isc-dhcp-server }
-      - { src; dhcpd.conf, dest: /etc/dhcp/dhcpd.conf }
-    notify: reinicio_dhcp
-
   # - name: "Modificar archivo isc-dhcp-server"
   #   template:
   #     src: isc-dhcp
@@ -46,3 +36,13 @@
   #     dest: /etc/dhcp/dhcpd.conf
   #     mode: 0644
   #   notify: reinicio_dhcp
+
+  - name: "Modificar los archivos de configuración del servidor"
+    template:
+      src: "{{ item.src }}"
+      dest: "{{ item.dest }}"
+      mode: 0644
+    with_items:
+      - { src: isc-dhcp, dest: /etc/default/isc-dhcp-server }
+      - { src: dhcpd.conf, dest: /etc/dhcp/dhcpd.conf }
+    notify: reinicio_dhcp
