--- a/site.yaml
+++ b/site.yaml
@@ -1,4 +1,14 @@
+- hosts: all
+  become: true
+  roles:
+    - role: commons
+
 - hosts: servidor
   become: true
   roles:
     - role: router
+
+- hosts: servidor
+  become: true
+  roles:
+    - role: dhcp
