--- a/roles/dhcp/tasks/main.yaml
+++ b/roles/dhcp/tasks/main.yaml
@@ -1,41 +1,8 @@
-  - name: "Actualizar los repositorios"
-    apt:
-      update_cache: yes
-      upgrade: "yes"
 
-  - name: "Instalar servidor dhcp e iptables"
+  - name: "Instalar servidor dhcp"
     apt:
       name:
         - isc-dhcp-server
-        - iptables
-
-  - name: "Activar el bit de forwarding"
-    sysctl:
-      name: net.ipv4.ip_forward
-      value: "1"
-      state: present
-      reload: yes
-
-  - name: "Modificar las interfaces desde plantilla"
-    template:
-      src: interfaces
-      dest: /etc/network/interfaces
-      mode: 0644
-    notify: reiniciar
-
-  # - name: "Modificar archivo isc-dhcp-server"
-  #   template:
-  #     src: isc-dhcp
-  #     dest: /etc/default/isc-dhcp-server
-  #     mode: 0644
-  #   notify: reinicio_dhcp
-
-  # - name: "Modificar archivo dhcpd.conf"
-  #   template:
-  #     src: dhcpd.conf
-  #     dest: /etc/dhcp/dhcpd.conf
-  #     mode: 0644
-  #   notify: reinicio_dhcp
 
   - name: "Modificar los archivos de configuración del servidor"
     template:
